# yandex_backend_task

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  gunicorn.conf.py  locustfile.py  noxfile.py  pyproject.toml
.github/: dependabot.yml
ecommerce_analyzer/: alembic.ini  config.py
ecommerce_analyzer/analyzer/: __init__.py  analyzer.py
ecommerce_analyzer/api/: application.py  dependencies.py  scheme.py  settings.py
ecommerce_analyzer/db/: __init__.py  base.py  models.py  settings.py  tables.py
ecommerce_analyzer/db/alembic/: env.py
ecommerce_analyzer/db/alembic/versions/: 81d1e2b91252_initial_migration.py
env/: dev.env
tests/: conftest.py  utils.py
tests/analyzer/: conftest.py  test_birthdays.py  test_citizens.py  test_imports.py  test_stats.py
tests/api/: conftest.py  test_get_age_stat.py  test_get_birthdays.py  test_get_citizens.py  test_patch_citizen.py  test_save_import.py
tests/migrations/: conftest.py  test_migrations.py
tests/schema/: test_schema.py
